# qiskit-qec

./: .buildinfo  .gitignore  .gitmodules  .pylintrc  .style.yapf  CMakeLists.txt  CONTRIBUTING.md  DATABASE_NOTES  MANIFEST.in  README.md  diagramscene.py  diagramscene_rc.py  genindex.html  geometry_test.ipynb  index.html  objects.inv  playground.ipynb  playground.py  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  transform_data.py  work.ipynb
sandbox/planar-error-correction/: .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements.txt  rm_install.sh  setup.py
sandbox/planar-error-correction/analysis/: Side-by-side comparison of compass and rssc on heavy-hex.ipynb
sandbox/planar-error-correction/analysis/hb/: hb-data.ipynb  run_bottom_11_12_zx_x_100000.text  run_bottom_11_12_zx_z_100000.text  run_bottom_11_3_zzzzxxxx_x_100000.text  run_bottom_11_3_zzzzxxxx_z_100000.text  run_bottom_11_4_zzzxxx_x_100000.text  run_bottom_11_4_zzzxxx_z_100000.text  run_bottom_11_6_zzxx_x_100000.text  run_bottom_11_6_zzxx_z_100000.text  run_bottom_3_12_zx_x_100000.text  run_bottom_3_12_zx_z_100000.text  run_bottom_3_3_zzzzxxxx_x_100000.text  run_bottom_3_3_zzzzxxxx_z_100000.text  run_bottom_3_4_zzzxxx_x_100000.text  run_bottom_3_4_zzzxxx_z_100000.text  run_bottom_3_6_zzxx_x_100000.text  run_bottom_3_6_zzxx_z_100000.text  run_bottom_5_12_zx_x_100000.text  run_bottom_5_12_zx_z_100000.text  run_bottom_5_3_zzzzxxxx_x_100000.text  run_bottom_5_3_zzzzxxxx_z_100000.text  run_bottom_5_4_zzzxxx_x_100000.text  run_bottom_5_4_zzzxxx_z_100000.text  run_bottom_5_6_zzxx_x_100000.text  run_bottom_5_6_zzxx_z_100000.text  run_bottom_7_12_zx_x_100000.text  run_bottom_7_12_zx_z_100000.text  run_bottom_7_3_zzzzxxxx_x_100000.text  run_bottom_7_3_zzzzxxxx_z_100000.text  run_bottom_7_4_zzzxxx_x_100000.text  run_bottom_7_4_zzzxxx_z_100000.text  run_bottom_7_6_zzxx_x_100000.text  run_bottom_7_6_zzxx_z_100000.text  run_bottom_9_12_zx_x_100000.text  run_bottom_9_12_zx_z_100000.text  run_bottom_9_3_zzzzxxxx_x_100000.text  run_bottom_9_3_zzzzxxxx_z_100000.text  run_bottom_9_4_zzzxxx_x_100000.text  run_bottom_9_4_zzzxxx_z_100000.text  run_bottom_9_6_zzxx_x_100000.text  (+41 more)
sandbox/planar-error-correction/analysis/hex/: hex-data.ipynb  run_bottom_11_12_zx_x_100000.text  run_bottom_11_12_zx_z_100000.text  run_bottom_11_3_zzzzxxxx_x_100000.text  run_bottom_11_3_zzzzxxxx_z_100000.text  run_bottom_11_4_zzzxxx_x_100000.text  run_bottom_11_4_zzzxxx_z_100000.text  run_bottom_11_6_zzxx_x_100000.text  run_bottom_11_6_zzxx_z_100000.text  run_bottom_3_12_zx_x_100000.text  run_bottom_3_12_zx_z_100000.text  run_bottom_3_3_zzzzxxxx_x_100000.text  run_bottom_3_3_zzzzxxxx_z_100000.text  run_bottom_3_4_zzzxxx_x_100000.text  run_bottom_3_4_zzzxxx_z_100000.text  run_bottom_3_6_zzxx_x_100000.text  run_bottom_3_6_zzxx_z_100000.text  run_bottom_5_12_zx_x_100000.text  run_bottom_5_12_zx_z_100000.text  run_bottom_5_3_zzzzxxxx_x_100000.text  run_bottom_5_3_zzzzxxxx_z_100000.text  run_bottom_5_4_zzzxxx_x_100000.text  run_bottom_5_4_zzzxxx_z_100000.text  run_bottom_5_6_zzxx_x_100000.text  run_bottom_5_6_zzxx_z_100000.text  run_bottom_7_12_zx_x_100000.text  run_bottom_7_12_zx_z_100000.text  run_bottom_7_3_zzzzxxxx_x_100000.text  run_bottom_7_3_zzzzxxxx_z_100000.text  run_bottom_7_4_zzzxxx_x_100000.text  run_bottom_7_4_zzzxxx_z_100000.text  run_bottom_7_6_zzxx_x_100000.text  run_bottom_7_6_zzxx_z_100000.text  run_bottom_9_12_zx_x_100000.text  run_bottom_9_12_zx_z_100000.text  run_bottom_9_3_zzzzxxxx_x_100000.text  run_bottom_9_3_zzzzxxxx_z_100000.text  run_bottom_9_4_zzzxxx_x_100000.text  run_bottom_9_4_zzzxxx_z_100000.text  run_bottom_9_6_zzxx_x_100000.text  (+41 more)
sandbox/planar-error-correction/analysis/hhc/: hhc-data.ipynb  run_bottom_11_12_zx_x_100000.text  run_bottom_11_12_zx_z_100000.text  run_bottom_11_3_zzzzxxxx_x_100000.text  run_bottom_11_3_zzzzxxxx_z_100000.text  run_bottom_11_4_zzzxxx_x_100000.text  run_bottom_11_4_zzzxxx_z_100000.text  run_bottom_11_6_zzxx_x_100000.text  run_bottom_11_6_zzxx_z_100000.text  run_bottom_3_12_zx_x_100000.text  run_bottom_3_12_zx_z_100000.text  (+70 more)
sandbox/planar-error-correction/doc/: circuit_matching_decoder.md  config.md  css_code.md  epselector.md  errorpropagator.md  faultenumerator.md  hhc.md  hhc_circuit.md  hhc_decoder.md  indexer.md  make_doc.sh  paulinoisemodel.md  rssc.md  rssc_circuit.md  rssc_decoder.md
sandbox/planar-error-correction/example/: ex.html  example-exp.ipynb  example.ipynb
sandbox/planar-error-correction/profiling/: test_fault_enumerator.py  test_pauli_fault.py
sandbox/planar-error-correction/simulation_runner/: equal-hhc.yaml  equal-rssc.yaml  fast-hhc.yaml  fast-rssc.yaml  multi.yaml  runyaml.py  slow-hhc.yaml  slow-rssc.yaml
sandbox/planar-error-correction/tests/: cerrorpropagator_test.py  circuitmatcher_test.py  compiledextension_test.py  css_code_test.py  faultenumerator_test.py  hhc_decoder_test.py  hhc_decoder_xz_exptest.py  hhc_decoder_zx_exptest.py  hhc_test.py  indexer_test.py  paulinoisemodel_test.py  pyerrorpropagator_test.py  rssc_decoder_test.py  rssc_test.py  run_tests.sh
src/qiskit_qec/analysis/: CMakeLIsts.txt  CMakeLists.txt  __init__.py  baseerrorpropagator.py  cerrorpropagator.py  cmake.txt  combinations.h  decoding_graph.py  distance.h  distance.py  errorpropagator.py  extensions.py  faultenumerator.h  faultenumerator.py  faultsampler.h  faultsampler.py  linear.h  linearsparse.h  lse_solvers.py  productiterator.h  pyerrorpropagator.py
src/qiskit_qec/circuits/: CMakeLists.txt  __init__.py  arctools.h  code_circuit.py  css_code.py  extensions.py  hhc_circuit.py  repetition_code.py  stim_code_circuit.py  surface_code.py
test-exmaples-drew/Cxx/HighlightSelection/: CMakeLists.txt  HighlightSelection.cxx
test-exmaples-drew/Cxx/ImageTracerWidgetNonPlanar/: CMakeLists.txt
test-exmaples-drew/ImageTracerWidgetInsideContour/: CMakeLists.txt
test-exmaples-drew/LineWidget2/: CMakeLists.txt
test-exmaples-drew/SmartVolumeMapper/: CMakeLists.txt  SmartVolumeMapper.cxx
(+1162 files in other folders)
