[metadata]
name = qiskit_qec
version = 1.0.0
description="Quantum Error Correcting Package",
long_description=README.md,
url = https://github.com/Qiskit/qiskit-qec,
author="nerds",
author_email="Grace Harper" <grace.harper@ibm.com>,
license="MIT",
packages=["qiskit_qec"],
python_requires=">=3.9",
include_package_data=True,
install_requires=[]



[options]
packages = find:

[options.packages.find] #optional
# exclude=black
