[build-system]
requires = [
  "setuptools",
  "wheel",
  "scikit-build>=0.11.0",
  "cmake>3.17",
  "pybind11>2.6",
  "ninja",
  "scikit-build>=0.11.0",
  "oldest-supported-numpy; python_version>'3.7' or platform_machine=='aarch64' or platform_python_implementation=='PyPy'",
  "numpy==1.16.3; python_version<='3.7' and platform_machine!='aarch64' or platform_python_implementation=='PyPy'",
]
build-backend = "setuptools.build_meta"# should these be added to the requirements.txt or .cfg file or?
